--- a/app/templates/app/dashboard.html
+++ b/app/templates/app/dashboard.html
@@ -41,13 +41,18 @@
 
                     <!-- Home Page -->
                     <div ng-show="isActArt==0 && isActCat==0" class="text-center home">
-                        <img src="http://www.pictures88.com/p/welcome/welcome_040.jpg"></img> <br><br>
-                        <p>
-                            Find very simple and easy to understand essay on nature. Bring some creativity in the education of your lovely kids, children and students who are studying in nursery, KG, 1, 2, 3, 4, 5, 6, 7, 8, 9, and 10. Nature is the most important thing for our life and our kids should know about this. So motivate their learning through following nature essay.
-                        </p>
-                        <p>
-                            We live on the most beautiful planet, Earth which has very clean and attractive nature full of greenery. Nature is our best friend which provides us all the resources to live here. It gives us water to drink, pure air to breathe, food to eat, land to stay, animals, plants for our other uses, etc for our betterment. We should fully enjoy the nature without disturbing its ecological balance. We should care our nature, make it peaceful, keep it clean and prevent it from the destruction so that we can enjoy our nature forever. Nature is a most precious gift given by the God to us to enjoy but not to harm.
-                        </p>
+                        <img src="http://images.huffingtonpost.com/2016-08-07-1470589738-1502108-forex.jpg" with="300px" height="300px"></img> <br><br>
+                        <h1 class="page-title entry-title" style="text-align: center;"><strong>What Is Forex?</strong></h1>
+<div class="entry-content">
+<p style="text-align: justify;"><strong>If you&rsquo;ve ever traveled to another country, you usually had to find a currency exchange booth at the airport, and then exchange the money you have in your wallet (if you&rsquo;re a dude) or purse (if you&rsquo;re a lady) or man purse (if you&rsquo;re a metrosexual) into the currency of the country you are visiting.</strong></p>
+<p style="text-align: justify;"><strong>You go up to the counter and notice a screen displaying different exchange rates for different currencies. You find &ldquo;Japanese yen&rdquo; and think to yourself, &ldquo;WOW! My one dollar is worth 100 yen?! And I have ten dollars! I&rsquo;m going to be rich!!!&rdquo; (This excitement is quickly killed when you stop by a shop in the airport afterwards to buy a can of soda and, all of a sudden, half your money is gone.)</strong></p>
+<p style="text-align: justify;"><strong>When you do this, you&rsquo;ve essentially participated in the forex market! You&rsquo;ve exchanged one currency for another. Or in forex trading terms, assuming you&rsquo;re an American visiting Japan, you&rsquo;ve sold dollars and bought yen.</strong></p>
+<p style="text-align: justify;"><strong>Before you fly back home, you stop by the currency exchange booth to exchange the yen that you miraculously have left over (Tokyo is expensive!) and notice the exchange rates have changed. It&rsquo;s these changes in the exchanges rates that allow you to make money in the foreign exchange market.</strong></p>
+<p style="text-align: justify;"><strong>The foreign exchange market, which is usually known as &ldquo;forex&rdquo; or &ldquo;FX,&rdquo; is the largest financial market in the world. Compared to the measly $22.4 billion per day volume of the New York Stock Exchange (NYSE), the foreign exchange market looks absolutely ginormous with its $5.3 TRILLION a day trade volume. Forex rocks our socks!</strong></p>
+<p style="text-align: justify;">&nbsp;</p>
+<p style="text-align: justify;">&nbsp;</p>
+</div>
+
                     </div>
                     <!-- -->
                     
